// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders Windows caption controls in expanded and collapsed states > windows collapsed 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
      data-window-drag="true"
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="panelIcon"
          data-content="88020f34"
          fill="none"
          height="16"
          stroke-width="1"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <div
          data-slot="sidebar.toggle.badge"
          style="display: contents;"
        />
      </button>
    </div>
    <div
      class="panelList"
    >
      <button
        aria-label="New chat"
        class="panelRow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="panelGlyph"
        >
          <svg
            aria-hidden="true"
            data-content="47b5e433"
            fill="none"
            height="18"
            stroke-width="1"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </button>
      <button
        aria-label="New work task"
        class="panelRow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="panelGlyph"
        >
          <svg
            aria-hidden="true"
            data-content="964807f4"
            fill="none"
            height="18"
            stroke-width="1"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </button>
    </div>
    <div
      class="regionFrame"
    >
      <div
        class="regionArea"
      >
        <div
          data-slot="sidebar.workspaces"
          style="display: contents;"
        />
        <div
          data-slot="sidebar.recent"
          style="display: contents;"
        />
      </div>
      <span
        aria-hidden="true"
        class="regionFade"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders Windows caption controls in expanded and collapsed states > windows expanded 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
      data-window-drag="true"
    >
      <button
        aria-label="New work task"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <img
                alt=""
                aria-hidden="true"
                height="27.75"
                src="data:image/webp;base64#8f3efb7e"
                width="32"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="fallbackBrandName"
              >
                WeWork
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="panelIcon"
          data-content="88020f34"
          fill="none"
          height="16"
          stroke-width="1"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      class="panelList"
    >
      <button
        aria-label="New chat"
        class="panelRow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="panelGlyph"
        >
          <svg
            aria-hidden="true"
            data-content="47b5e433"
            fill="none"
            height="16"
            stroke-width="1"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
        <span
          class="panelTitle wide"
        >
          New chat
        </span>
      </button>
      <button
        aria-label="New work task"
        class="panelRow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="panelGlyph"
        >
          <svg
            aria-hidden="true"
            data-content="964807f4"
            fill="none"
            height="16"
            stroke-width="1"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
        <span
          class="panelTitle wide"
        >
          New work task
        </span>
      </button>
    </div>
    <div
      class="regionFrame"
    >
      <div
        class="regionArea"
      >
        <div
          data-slot="sidebar.workspaces"
          style="display: contents;"
        />
        <div
          data-slot="sidebar.recent"
          style="display: contents;"
        />
      </div>
      <span
        aria-hidden="true"
        class="regionFade"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
      data-window-drag="true"
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <span
          aria-hidden="true"
          class="railMark"
        >
          <div
            data-slot="sidebar.brand.mark"
            style="display: contents;"
          >
            <img
              alt=""
              aria-hidden="true"
              height="27.75"
              src="data:image/webp;base64#8f3efb7e"
              width="32"
            />
          </div>
        </span>
        <svg
          aria-hidden="true"
          class="panelIcon"
          data-content="88020f34"
          fill="none"
          height="18"
          stroke-width="1"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
        <div
          data-slot="sidebar.toggle.badge"
          style="display: contents;"
        />
      </button>
    </div>
    <div
      class="panelList"
    >
      <button
        aria-label="New chat"
        class="panelRow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="panelGlyph"
        >
          <svg
            aria-hidden="true"
            data-content="47b5e433"
            fill="none"
            height="18"
            stroke-width="1"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </button>
      <button
        aria-label="New work task"
        class="panelRow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="panelGlyph"
        >
          <svg
            aria-hidden="true"
            data-content="964807f4"
            fill="none"
            height="18"
            stroke-width="1"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </button>
    </div>
    <div
      class="regionFrame"
    >
      <div
        class="regionArea"
      >
        <div
          data-slot="sidebar.workspaces"
          style="display: contents;"
        />
        <div
          data-slot="sidebar.recent"
          style="display: contents;"
        />
      </div>
      <span
        aria-hidden="true"
        class="regionFade"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, entry rows, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
      data-window-drag="true"
    >
      <button
        aria-label="New work task"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <img
                alt=""
                aria-hidden="true"
                height="27.75"
                src="data:image/webp;base64#8f3efb7e"
                width="32"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="fallbackBrandName"
              >
                WeWork
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="panelIcon"
          data-content="88020f34"
          fill="none"
          height="16"
          stroke-width="1"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      class="panelList"
    >
      <button
        aria-label="New chat"
        class="panelRow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="panelGlyph"
        >
          <svg
            aria-hidden="true"
            data-content="47b5e433"
            fill="none"
            height="16"
            stroke-width="1"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
        <span
          class="panelTitle wide"
        >
          New chat
        </span>
      </button>
      <button
        aria-label="New work task"
        class="panelRow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="panelGlyph"
        >
          <svg
            aria-hidden="true"
            data-content="964807f4"
            fill="none"
            height="16"
            stroke-width="1"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
        <span
          class="panelTitle wide"
        >
          New work task
        </span>
      </button>
    </div>
    <div
      class="regionFrame"
    >
      <div
        class="regionArea"
      >
        <div
          data-slot="sidebar.workspaces"
          style="display: contents;"
        />
        <div
          data-slot="sidebar.recent"
          style="display: contents;"
        />
      </div>
      <span
        aria-hidden="true"
        class="regionFade"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
      data-window-drag="true"
    >
      <button
        aria-label="新建工作任务"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <img
                alt=""
                aria-hidden="true"
                height="27.75"
                src="data:image/webp;base64#8f3efb7e"
                width="32"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="fallbackBrandName"
              >
                WeWork
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="panelIcon"
          data-content="88020f34"
          fill="none"
          height="16"
          stroke-width="1"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      class="panelList"
    >
      <button
        aria-label="新建对话"
        class="panelRow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="panelGlyph"
        >
          <svg
            aria-hidden="true"
            data-content="47b5e433"
            fill="none"
            height="16"
            stroke-width="1"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
        <span
          class="panelTitle wide"
        >
          新对话
        </span>
      </button>
      <button
        aria-label="新建工作任务"
        class="panelRow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="panelGlyph"
        >
          <svg
            aria-hidden="true"
            data-content="964807f4"
            fill="none"
            height="16"
            stroke-width="1"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
        <span
          class="panelTitle wide"
        >
          新工作任务
        </span>
      </button>
    </div>
    <div
      class="regionFrame"
    >
      <div
        class="regionArea"
      >
        <div
          data-slot="sidebar.workspaces"
          style="display: contents;"
        />
        <div
          data-slot="sidebar.recent"
          style="display: contents;"
        />
      </div>
      <span
        aria-hidden="true"
        class="regionFade"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
